--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "bcryptjs": "^2.4.3",
     "connect-session-knex": "^1.6.0",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
@@ -31,10 +30,15 @@
     "knex": "^0.20.13",
     "node": "^13.12.0",
     "node-postgres": "^0.1.4",
-    "sqlite3": "^4.1.1",
-    "supertest": "^4.0.2"
+    "sqlite3": "^4.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "jest": "^25.3.0",
+    "cross-env": "^7.0.2",
+    "supertest": "^4.0.2"
+  },
+  "jest": {
+    "testEnviornment": "node" 
   }
 }
