--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.15",
     "knex-cleaner": "^1.3.0",
+    "node": "^12.18.0",
     "node-postgres": "^0.1.4",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
