--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
-    "test": "cross-env DB_ENV=testing jest --watch",
+    "test": "cross-env DB_ENV=testing jest --verbose --runInBand --forceExit",
     "coverage": "jest --coverage --detectOpenHandles --forceExit || true"
   },
   "repository": {
@@ -44,10 +44,11 @@
   },
   "jest": {
     "testEnvironment": "node",
+    "verbose": true,
     "collectCoverageFrom": [
 			"**/*.js",
 			"!**/node_modules/**",
-			"!**/vendo/**",
+			"!**/vendor/**",
       "!**/tests/**",
       "!**/spec/**",
       "!**/*.spec.{js, jsx}",
